# domino-data

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .swagger-codegen-ignore  LICENSE  Makefile  README.md  datasource.json  datasource.py  featureset.py  featureset_uc.py  gen.py  get-poetry.py  pyproject.toml  readme.txt  requirements.txt  setup.cfg  training_set_api_client  trainingset.yaml  trainingset_test.py  trainingset_uc.py  update-submodule-and-gen-configs.sh  update-trainingset-client.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
data-remotefs-client/: README.md  setup.py
data-remotefs-client/docs/: AuthzApi.md  DataTransfersApi.md  DownloadsApi.md  FilesystemsApi.md  RemotefsConnectionSnippet.md  RemotefsDataTransfer.md  RemotefsDataTransferStatus.md  RemotefsDataTransferType.md  RemotefsFileCollisionSetting.md  RemotefsFilesystem.md  RemotefsFiletaskTask.md  RemotefsFilter.md  RemotefsFlowsArtifactVersionKey.md  RemotefsFlowsExecutionIdentifier.md  RemotefsMeta.md  RemotefsPagination.md  RemotefsPermission.md  RemotefsPermissionCode.md  RemotefsProject.md  RemotefsResourceStatus.md  RemotefsSnapshot.md  RemotefsSnippetLanguage.md  RemotefsTaskUpdate.md  RemotefsUserSummary.md  RemotefsVolume.md  RemotefsVolumeGrant.md  RemotefsVolumeGrantDTO.md  RemotefsVolumeMount.md  RemotefsVolumeRole.md  ServerCreateDataTransfer.md  ServerCreateDownloadArchiveRequest.md  ServerCreateSnapshot.md  ServerCreateSnapshotFromRun.md  ServerCreateVolumeRequest.md  ServerFilesystem.md  ServerHTTPError.md  ServerListVolumeMountsRequest.md  ServerPaginatedFilesystems.md  ServerPaginatedSnapshots.md  ServerPaginatedVolumes.md  (+15 more)
data-remotefs-client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
data-remotefs-client/test/: test_authz_api.py  test_data_transfers_api.py  test_downloads_api.py  test_filesystems_api.py  test_remotefs_connection_snippet.py  test_remotefs_data_transfer.py  test_remotefs_data_transfer_status.py  test_remotefs_data_transfer_type.py  test_remotefs_file_collision_setting.py  test_remotefs_filesystem.py  test_remotefs_filetask_task.py  test_remotefs_filter.py  test_remotefs_flows_artifact_version_key.py  test_remotefs_flows_execution_identifier.py  test_remotefs_meta.py  test_remotefs_pagination.py  test_remotefs_permission.py  test_remotefs_permission_code.py  test_remotefs_project.py  test_remotefs_resource_status.py  test_remotefs_snapshot.py  test_remotefs_snippet_language.py  test_remotefs_task_update.py  test_remotefs_user_summary.py  test_remotefs_volume.py  test_remotefs_volume_grant.py  test_remotefs_volume_grant_dto.py  test_remotefs_volume_mount.py  test_remotefs_volume_role.py  test_server_create_data_transfer.py  test_server_create_download_archive_request.py  test_server_create_snapshot.py  test_server_create_snapshot_from_run.py  test_server_create_volume_request.py  test_server_filesystem.py  test_server_http_error.py  test_server_list_volume_mounts_request.py  test_server_paginated_filesystems.py  test_server_paginated_snapshots.py  test_server_paginated_volumes.py  (+15 more)
datasdk/: datasource.py
datasdk/trainingset/: client.py  model.py
datasource_api_client/: __init__.py  client.py
datasource_api_client/models/: __init__.py  create_datasource_request.py  datasource_config.py  datasource_dto.py  datasource_dto_added_by.py  datasource_dto_auth_type.py  datasource_dto_credential_type.py  datasource_dto_data_source_type.py  datasource_dto_status.py  datasource_owner_info.py  error_response.py  key_request.py  list_request.py  log_metric_m.py  log_metric_t.py  proxy_error_response.py  url_request.py  url_request_config_overwrites.py  url_request_credential_overwrites.py
datasource_client/: __init__.py
datasource_client/models/: __init__.py  dominoapi_error_response.py
docs/: requirements.txt  trainingset_client.rst
docs/source/: auth.rst  conf.py  datasdk.rst  domino_data.rst  domino_data_sdk.rst  index.rst  install.rst  trainingset_client.rst
domino_data/: __init__.py  auth.py  configuration_gen.py  data_sources.py  datasets.py  datasource.py  featurestore.py  featurestore_sync.py  logging.py  logging2.py  meta.py  netapp_volumes.py  run_featurestore_sync.py  transfer.py  vectordb.py
domino_data/_feature_store/: client.py  exceptions.py  featurestore.py  featurestore_sync.py  git.py  logging.py  run.py  sync.py
domino_data/feature_store/: cli.py  featurestore.py  featurestore_sync.py  git.py  run_featurestore_sync.py
domino_data/training_sets/: client.py  model.py
domino_data_sdk/: __init__.py  auth.py  datasource.py
domino_data_sdk/trainingset/: client.py  model.py
examples/: trainingset_uc.py
feature_store_api_client/: __init__.py  client.py  types.py
feature_store_api_client/models/: __init__.py  auth_config.py  auth_config_fields.py  auth_config_meta.py  auth_field_name.py  auth_type.py  batch_source.py  batch_source_source_options.py  config_field_name.py  create_feature_store_request.py  create_feature_store_request_offline_store_config.py  create_feature_views_request.py  entity.py  feature.py  feature_store.py  feature_store_offline_store_config.py  feature_store_sync_result.py  feature_tags.py  feature_view.py  feature_view_dto.py  feature_view_dto_tags.py  feature_view_request.py  feature_view_request_tags.py  feature_view_tags.py  field.py  (+10 more)
openapi/: datasource.yaml  featurestore.yaml  trainingset.yaml
remotefs_api_client/: .swagger-codegen-ignore  __init__.py  api_client.py  configuration.py  rest.py
scripts/: gen.py  test_blob_transfer.py
tests/: conftest.py  domino_token  patches.py  test_dataset.py  test_datasource.py  test_featurestore.py  test_logging.py  test_range_download.py  test_trainingset.py  test_transfer.py  test_transfer_integration.py  test_vectordb.py  test_volume.py  trainingset_test.py
training-set-api-client/: README.md  pyproject.toml
training_set_api_client/: __init__.py  client.py  types.py
trainingset/: client.py  model.py  models.py  trainingset.yaml
(+260 files in other folders)
